--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "CampAang site listing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server/index.js",
+    "build": "webpack -d --watch",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,29 @@
   "bugs": {
     "url": "https://github.com/hrr46-fec-aang/listingservice/issues"
   },
-  "homepage": "https://github.com/hrr46-fec-aang/listingservice#readme"
+  "homepage": "https://github.com/hrr46-fec-aang/listingservice#readme",
+  "dependencies": {
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "express": "^4.17.1",
+    "jest": "^26.0.1",
+    "jquery": "^3.5.1",
+    "mongoose": "^5.9.19",
+    "nodemon": "^2.0.4",
+    "puppeteer": "^4.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "nodemon": "^2.0.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
+
+
+
