--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "build": "webpack -d --watch",
-    "test": "jest"
+    "test": "jest",
+    "db:seed": "node database/seed.js"
   },
   "repository": {
     "type": "git",
