Adds faker data

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "jest": "^26.0.1",
     "jquery": "^3.5.1",
     "mongoose": "^5.9.19",
@@ -41,6 +42,3 @@
     "webpack-cli": "^3.3.11"
   }
 }
-
-
-
