Updates state before rendering the page

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^26.0.1",
     "jquery": "^3.5.1",
     "mongoose": "^5.9.19",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "puppeteer": "^4.0.0",
     "react": "^16.13.1",
