--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,22 @@
-version: 2
+version: 2.1
+orbs:
+  node: circleci/node@1.1.6
 jobs:
-  one:
+  build-and-test:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/node
+      - image: circleci/mongo:4.2.1
+    executor:
+      name: node/default
+      tag: '12.16.1'
     steps:
       - checkout
-      - run: echo "A first hello"
-      - run: mkdir -p my_workspace
-      - run: echo "Trying out workspaces" > my_workspace/echo-output
-      - persist_to_workspace:
-          # Must be an absolute path, or relative path from working_directory
-          root: my_workspace
-          # Must be relative path from root
-          paths:
-            - echo-output      
-  two:
-    docker:
-      - image: circleci/ruby:2.4.1
-    steps:
-      - checkout
-      - run: echo "A more familiar hi"  
-      - attach_workspace:
-          # Must be absolute path or relative path from working_directory
-          at: my_workspace
-
-      - run: |
-          if [[ $(cat my_workspace/echo-output) == "Trying out workspaces" ]]; then
-            echo "It worked!";
-          else
-            echo "Nope!"; exit 1
-          fi
+      - node/with-cache:
+          steps:
+            - run: npm install
+      - run: npm run db:setup
+      - run: npm test
 workflows:
-  version: 2
-  one_and_two:
+  build-and-test:
     jobs:
-      - one
-      - two:
-          requires:
-            - one
+      - build-and-test
