--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  build:
     docker:
       - image: circleci/node
       - image: circleci/mongo:4.2.1
@@ -16,7 +16,3 @@ jobs:
             - run: npm install
       - run: npm run db:setup
       - run: npm test
-workflows:
-  build-and-test:
-    jobs:
-      - build-and-test
