--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,13 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  one:
+  build-and-test:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/node
       - image: circleci/mongo:3.5.9
+    executor:
+      name: node/default
+      tag: '12.16.1'
     steps:
       - checkout
       - node/with-cache:
@@ -13,41 +16,7 @@ jobs:
             - run: npm install
       - run: npm run db:setup
       - run: npm test
-
-      # - checkout
-      # - run: echo "A first hello"
-      # - run: mkdir -p my_workspace
-      # - run: echo "Trying out workspaces" > my_workspace/echo-output
-      # - persist_to_workspace:
-      #     # Must be an absolute path, or relative path from working_directory
-      #     root: my_workspace
-      #     # Must be relative path from root
-      #     paths:
-      #       - echo-output
-  # two:
-  #   docker:
-  #     - image: circleci/ruby:2.4.1
-  #   steps:
-  #     - checkout
-  #     - run: echo "A more familiar hi"
-  #     - attach_workspace:
-  #         # Must be absolute path or relative path from working_directory
-  #         at: my_workspace
-
-  #     - run: |
-  #         if [[ $(cat my_workspace/echo-output) == "Trying out workspaces" ]]; then
-  #           echo "It worked!";
-  #         else
-  #           echo "Nope!"; exit 1
-  #         fi
 workflows:
-  version: 2.1
-  one:
-      jobs:
-        - one
-  # one_and_two:
-  #   jobs:
-  #     - one
-  #     - two:
-  #         requires:
-  #           - one
+  build-and-test:
+    jobs:
+      - build-and-test
