--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-      - run: npm run db:setup
+      - run: npm run db:seed
       - run: npm test
 workflows:
   build-and-test:
