--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-        - image: circleci/node
+        - image: circleci/node:latest-browsers
         - image: circleci/mongo:4.2.1
     executor:
       name: node/default
