--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
+      - run: npm run build
       - run: npm run db:seed
       - run: npm test
 workflows:
