--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest",
     "db:seed": "node database/seed.js"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hrr46-fec-aang/listingservice.git"
@@ -45,6 +48,7 @@
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "nodemon": "^2.0.4",
+    "supertest": "^4.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
