--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CampAang site listing",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "nodemon server/start.js",
     "build": "webpack -d --watch",
     "buildCI": "webpack -d",
     "test": "jest",
@@ -40,7 +40,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
@@ -48,7 +49,6 @@
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "nodemon": "^2.0.4",
-    "supertest": "^4.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
