--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "jest": "^26.0.1",
     "jquery": "^3.5.1",
     "mongoose": "^5.9.19",
