--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "reactjs-popup": "^1.5.0",
     "styled-components": "^5.1.1",
     "supertest": "^4.0.2"
   },
