--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "nodemon server/start.js",
     "build": "webpack -d --watch",
     "buildCI": "webpack -d",
+    "test": "jest --detectOpenHandles",
     "testBE": "jest ./test/BE.test.js",
     "testFE": "jest ./test/FE.test.js",
-    "db:seed": "node database/seed.js"
+    "db:seed": "node database/seed.js",
+    "test:coverage": "jest --coverageDirectory='coverage'  --coverage --colors"
   },
   "jest": {
-    "testEnvironment": "jsdom",
     "transform": {
       "^.+\\.js?$": "babel-jest",
       "^.+\\.jsx$": "babel-jest"
@@ -29,6 +30,7 @@
   },
   "homepage": "https://github.com/hrr46-fec-aang/listingservice#readme",
   "dependencies": {
+    "@babel/runtime": "^7.10.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
@@ -47,11 +49,14 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "reactjs-popup": "^1.5.0",
+    "regenerator-runtime": "^0.13.5",
     "styled-components": "^5.1.1",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "regenerator-runtime": "^0.13.5",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "babel-core": "^7.0.0-bridge.0",
